objects/ServiceResource.object
<CustomObject>
    <fields>
        <fullName>ASI_Resource_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ASI Resource Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Case_Safe_Id__c</fullName>
        <formula>CASESAFEID( Id )</formula>
        <label>Case Safe Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Number__c</fullName>
        <formula>RelatedRecord.EmployeeNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employment_Status__c</fullName>
        <label>Employment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full Time</fullName>
                </value>
                <value>
                    <fullName>Furlough</fullName>
                </value>
                <value>
                    <fullName>Leave</fullName>
                </value>
                <value>
                    <fullName>Reduced Hours</fullName>
                </value>
                <value>
                    <fullName>Terminated/Resigned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__Efficiency__c</fullName>
        <label>Efficiency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__GanttLabel__c</fullName>
        <label>Gantt Label</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__Online_Offset__c</fullName>
        <description>Online offset in minutes</description>
        <label>Online Offset</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Picture_Link__c</fullName>
        <label>Picture Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FSL__Priority__c</fullName>
        <label>Priority</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Travel_Speed__c</fullName>
        <label>Travel Speed</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <formula>RelatedRecord.Username</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Username</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ALL_Service_Resources</fullName>
        <columns>Name</columns>
        <columns>ResourceType</columns>
        <columns>IsActive</columns>
        <columns>LastModifiedDate</columns>
        <columns>IsCapacityBased</columns>
        <columns>ServiceCrew</columns>
        <columns>Employee_Number__c</columns>
        <columns>CreatedDate</columns>
        <filterScope>Everything</filterScope>
        <label>ALL  Service Resources</label>
    </listViews>
    <listViews>
        <fullName>All_ServiceResources</fullName>
        <columns>Name</columns>
        <columns>ResourceType</columns>
        <columns>IsActive</columns>
        <columns>LastModifiedDate</columns>
        <columns>IsCapacityBased</columns>
        <columns>ServiceCrew</columns>
        <columns>Employee_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Active Service Resources</label>
    </listViews>
    <listViews>
        <fullName>My_ServiceResources</fullName>
        <filterScope>Mine</filterScope>
        <label>My Service Resources</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FSL__Capacity_Resource_of_Type_Crew</fullName>
        <active>true</active>
        <errorConditionFormula>AND(IsCapacityBased,ISPICKVAL(ResourceType, &apos;C&apos;))</errorConditionFormula>
        <errorMessage>Capacity Resource Can&apos;t Be of Type Crew</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Resource_travel</fullName>
        <active>true</active>
        <errorConditionFormula>FSL__Travel_Speed__c &lt;= 0</errorConditionFormula>
        <errorDisplayField>FSL__Travel_Speed__c</errorDisplayField>
        <errorMessage>Resource travel speed must be greater than 0.</errorMessage>
    </validationRules>
</CustomObject>